# Automation_Platform

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
src/automation_platform/: __init__.py  settings.py
src/automation_platform/api/: __init__.py  bot_control.py  bot_reports.py  bot_routes.py  home.py  launchpad.py  populate.py  reports.py  schedule.py  schedule_reports.py
src/automation_platform/auth/: middleware.py  msal_client.py  routes.py
src/automation_platform/database/: database.py  models.py
src/automation_platform/scheduler/: scheduler.py
src/automation_platform/static/css/: light-style.css  mini.CSS  style.css
src/automation_platform/static/js/: bot_control.js  bot_control_bots.js  bot_logs.js  bot_reports.js  home.js  launchpad.js  log_view.js  script.js
src/automation_platform/templates/: base.html  bot-control-bots.html  bot-control-logs.html  bot-control.html  bot-details.html  bot_reports.html  bot_reports_log_view.html  home.html  launchpad.html  login.html  login1.html  reports.html  schedule_manager.html  schedule_reports.html
